Update frontend to resolve merge conflicts and include minor enhancements
Summary:
  * replace Sign In dialog with 'flipped' version of Sign Up
  * add new favicon
  * add 2nd Add Habit button at top/center of Step 2: Add habit page
  * import new Montserrat and Sparkle font
  * update DataService to add getter/setter for ChildId, # of active prizes, UserId (temp until auth
implemented)
  * fix grid unresponsiveness bug on My Prize
  * resize/reposition images & 3d objects on My Prize
  * add settings icon for parents to return to Stepper
  * fix bug with dance music not playing for David's prize (1st card on My Prize)
  * add headings for My Day & My Prize

Test: 
  * Go to http://localhost:3000/home and click Sign In button to see it 'flip' to the new sign
in form...type "1" for Username and click Sign In to sign in. 
  * Navigate through all pages to make sure everything is functioning properly as before including new UI changes mentioned above

 # Please
enter the commit message
for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit.

--- a/client/src/app/child-mode/my-collection/pop-up/pop-up.component.scss
+++ b/client/src/app/child-mode/my-collection/pop-up/pop-up.component.scss
@@ -1,25 +1,31 @@
-.sign{
-    display: flex;
-    justify-content: center;
-    font-size: medium;
+.sign {
+  display: flex;
+  justify-content: center;
+  font-size: medium;
+}
+#card1 model-viewer {
+  width: 1000px !important;
+  height: 1000px !important;
+  position: relative;
+  bottom: 380px;
+  right: 100px;
+}
+.qr-code {
+  position: absolute;
+  top: 90px; /* Adjust the top position as needed */
+  right: 10px; /* Adjust the right position as needed */
+  width: 100px; /* Set the width of the QR code image */
+  height: auto;
 }
 
-.qr-code {
-    position: absolute;
-    top: 10px; /* Adjust the top position as needed */
-    right: 10px; /* Adjust the right position as needed */
-    width: 100px; /* Set the width of the QR code image */
-    height: auto;
-  }
+.container {
+  position: relative;
+  width: 100%;
+  max-width: 800px; /* Set your desired max-width for the container */
+}
 
-  .container {
-    position: relative;
-    width: 100%;
-    max-width: 800px; /* Set your desired max-width for the container */
-  }
-
-  .main-image {
-    width: 60%;
-    height: auto;
-    display: block;
-  }
+.main-image {
+  width: 60%;
+  height: auto;
+  display: block;
+}
