--- a/client/src/app/child-mode/my-collection/my-collection.component.html
+++ b/client/src/app/child-mode/my-collection/my-collection.component.html
@@ -1,116 +1,251 @@
- <div class="theme">
- <div class="children">
-  <mat-button-toggle-group aria-label="Children Toggle">
-    <mat-button-toggle
-      *ngFor="let child of children"
-      [value]="child.child_name"
-      (click)="onToggleClick(child.child_id!)"
-    >
-      {{ child.child_name }}
-    </mat-button-toggle>
-  </mat-button-toggle-group>
-</div>
-
- <div class="wrapper">
-  <h1>My Prize</h1>
-  <div [className]="'cols disabledCards' + childId">
-			<!-- David -->
-			<div class="col" ontouchstart="this.classList.toggle('hover');" id="card1">
-				<div class="container">
-					<div class="front" style="background-image: url('../../../assets/AHbfLKA.png')">
-						<div class="inner">
-              				<img mat-card-image src="../../../assets/AHbfLKA-removebg-preview.png" style="width: 150%; height: 150%" alt="Image Alt Text">
-						</div>
-					</div>
-					<div class="back">
-						<div class="inner">
-							<model-viewer src="../../../assets/davidDance.glb" camera-controls ar autoplay scale="10 10 10" shadow-intensity="1" style="width:300px; height:300px"></model-viewer>
-							<button mat-button color="primary" (click)="openPopUp('David')">Open</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- Spark -->
-			<div class="col" ontouchstart="this.classList.toggle('hover');" id="card2">
-				<div class="container">
-					<div class="front" style="background-image: url('../../../assets/spark.png')">
-						<div class="inner">
-              				<img mat-card-image src="../../../assets/spark-removebg-preview.png" style="width: 130%; height: 130%" alt="Image Alt Text">
-						</div>
-					</div>
-					<div class="back">
-						<div class="inner">
-							<model-viewer src="../../../assets/spark (1).glb" camera-controls ar autoplay scale="10 10 10" shadow-intensity="1" style="width:150px; height:150px"></model-viewer>
-							<button mat-button color="primary" tabindex="2" (click)="openPopUp('Spark')">Open</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- Robot -->
-			<div class="col" ontouchstart="this.classList.toggle('hover');" id="card3">
-				<div class="container">
-					<div class="front" style="background-image: url('../../../assets/robotto.png')">
-						<div class="inner">
-              				<img mat-card-image src="../../../assets/robot-no-bg.png" style="width: 110%; height: 110%" alt="Image Alt Text">
-						</div>
-					</div>
-					<div class="back">
-						<div class="inner">
-							<model-viewer src="../../../assets/robot.glb" camera-controls ar autoplay scale="10 10 10" shadow-intensity="1" style="width:200px; height:200px"></model-viewer>
-							<button mat-button color="primary" tabindex="2" (click)="openPopUp('Robot')">Open</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- Bear AR -->
-			<div class="col" ontouchstart="this.classList.toggle('hover');" id="card3">
-				<div class="container">
-					<div class="front" style="background-image: url('../../../assets/bear.png')">
-						<div class="inner">
-              				<img mat-card-image src="../../../assets/bear-removebg-preview (1).png" style="width: 110%; height: 110%" alt="Image Alt Text">
-						</div>
-					</div>
-					<div class="back">
-						<div class="inner">
-							<img mat-card-image src="../../../assets/bear.png" style="width: 110%; height: 110%" alt="Image Alt Text">
-							<button mat-button color="primary" tabindex="2" (click)="openPopUp('BearAr')">Open</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- Bird -->
-			<div class="col" ontouchstart="this.classList.toggle('hover');" id="card4">
-				<div class="container">
-					<div class="front" style="background-image: url('../../../assets/bird.jpeg')">
-						<div class="inner">
-							<img mat-card-image src="../../../assets/bird-removebg-preview.png" style="width: 300px; height: 300px" alt="Image Alt Text">
-						</div>
-					</div>
-					<div class="back">
-						<div class="inner">
-              			<!-- <model-viewer src="../../../assets/davidDance.glb" camera-controls ar autoplay scale="10 10 10" shadow-intensity="1" style="width:500px; height:500px"></model-viewer> -->
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- Rabbit -->
-			<div class="col" ontouchstart="this.classList.toggle('hover');" id="card5">
-				<div class="container">
-					<div class="front" style="background-image: url('../../../assets/rabbit.jpeg')">
-						<div class="inner">
-							<img mat-card-image src="../../../assets/rabbit-removebg-preview.png" style="width: 300px; height: 300px" alt="Image Alt Text">
-						</div>
-					</div>
-					<div class="back">
-						<div class="inner">
+<div class="theme">
+  <div class="children">
+    <mat-button-toggle-group aria-label="Children Toggle">
+      <mat-button-toggle
+        *ngFor="let child of children"
+        [value]="child.child_name"
+        (click)="onToggleClick(child.child_id!)"
+      >
+        {{ child.child_name }}
+      </mat-button-toggle>
+    </mat-button-toggle-group>
+  </div>
+  <div class="wrapper">
+    <h1>My Prize</h1>
+    <div [className]="'cols disabledCards' + childId">
+      <!-- David -->
+      <div
+        class="col"
+        [ngClass]="{ open: userActivatedItems! > 0 }"
+        ontouchstart="this.classList.toggle('hover');"
+        id="card1"
+      >
+        <div class="container">
+          <div
+            class="front"
+            style="background-image: url('../../../assets/AHbfLKA.png')"
+          >
+            <div class="inner">
+              <img
+                mat-card-image
+                src="../../../assets/AHbfLKA-removebg-preview.png"
+                style="width: 150%; height: 150%"
+                alt="Image Alt Text"
+              />
+            </div>
+          </div>
+          <div class="back">
+            <div class="inner">
+              <model-viewer
+                src="../../../assets/davidDance.glb"
+                camera-controls
+                ar
+                autoplay
+                scale="10 10 10"
+                shadow-intensity="1"
+                style="width: 300px; height: 300px"
+              ></model-viewer>
+              <button
+                mat-button
+                color="primary"
+                (click)="openPopUp('David'); audioPlayer.play()"
+              >
+                Open
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <audio #audioPlayer controls style="display: none">
+        <source src="./assets/dance-music.mp3" type="audio/mp3" />
+        Your browser does not support the audio element.
+      </audio>
+      <!-- Spark -->
+      <div
+        class="col"
+        [ngClass]="{ open: userActivatedItems! > 1 }"
+        ontouchstart="this.classList.toggle('hover');"
+        id="card2"
+      >
+        <div class="container">
+          <div
+            class="front"
+            style="background-image: url('../../../assets/spark.png')"
+          >
+            <div class="inner">
+              <img
+                mat-card-image
+                src="../../../assets/spark-removebg-preview.png"
+                style="width: 110%; height: 110%"
+                alt="Image Alt Text"
+              />
+            </div>
+          </div>
+          <div class="back">
+            <div class="inner">
+              <model-viewer
+                src="../../../assets/spark (1).glb"
+                camera-controls
+                ar
+                autoplay
+                scale="10 10 10"
+                shadow-intensity="1"
+                style="width: 150px; height: 150px"
+              ></model-viewer>
+              <button
+                mat-button
+                color="primary"
+                tabindex="2"
+                (click)="openPopUp('Spark')"
+              >
+                Open
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Robot -->
+      <div
+        class="col"
+        [ngClass]="{ open: userActivatedItems! > 2 }"
+        ontouchstart="this.classList.toggle('hover');"
+        id="card3"
+      >
+        <div class="container">
+          <div
+            class="front"
+            style="background-image: url('../../../assets/robotto.png')"
+          >
+            <div class="inner">
+              <img
+                mat-card-image
+                src="../../../assets/robot-no-bg.png"
+                style="width: 110%; height: 110%"
+                alt="Image Alt Text"
+              />
+            </div>
+          </div>
+          <div class="back">
+            <div class="inner">
+              <model-viewer
+                src="../../../assets/robot.glb"
+                camera-controls
+                ar
+                autoplay
+                scale="10 10 10"
+                shadow-intensity="1"
+                style="width: 200px; height: 200px"
+              ></model-viewer>
+              <button
+                mat-button
+                color="primary"
+                tabindex="2"
+                (click)="openPopUp('Robot')"
+              >
+                Open
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Bear AR -->
+      <div
+        class="col"
+        [ngClass]="{ open: userActivatedItems! > 3 }"
+        ontouchstart="this.classList.toggle('hover');"
+        id="card4"
+      >
+        <div class="container">
+          <div
+            class="front"
+            style="background-image: url('../../../assets/bear.png')"
+          >
+            <div class="inner">
+              <img
+                mat-card-image
+                src="../../../assets/bear-removebg-preview (1).png"
+                style="width: 110%; height: 110%"
+                alt="Image Alt Text"
+              />
+            </div>
+          </div>
+          <div class="back">
+            <div class="inner">
+              <img
+                mat-card-image
+                src="../../../assets/bear.png"
+                style="width: 110%; height: 110%"
+                alt="Image Alt Text"
+              />
+              <button
+                mat-button
+                color="primary"
+                tabindex="2"
+                (click)="openPopUp('BearAr')"
+              >
+                Open
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Bird -->
+      <div
+        class="col"
+        [ngClass]="{ open: userActivatedItems! > 4 }"
+        ontouchstart="this.classList.toggle('hover');"
+        id="card5"
+      >
+        <div class="container">
+          <div
+            class="front"
+            style="background-image: url('../../../assets/bird.jpeg')"
+          >
+            <div class="inner">
+              <!-- <img
+                mat-card-image
+                src="../../../assets/bird-removebg-preview.png"
+                style="width: 300px; height: 300px"
+                alt="Image Alt Text"
+              /> -->
+            </div>
+          </div>
+          <div class="back">
+            <div class="inner">
+              <!-- <model-viewer src="../../../assets/davidDance.glb" camera-controls ar autoplay scale="10 10 10" shadow-intensity="1" style="width:500px; height:500px"></model-viewer> -->
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Rabbit -->
+      <div
+        class="col"
+        [ngClass]="{ open: userActivatedItems! > 5 }"
+        ontouchstart="this.classList.toggle('hover');"
+        id="card6"
+      >
+        <div class="container">
+          <div
+            class="front"
+            style="background-image: url('../../../assets/rabbit.jpeg')"
+          >
+            <div class="inner">
+              <!-- <img
+                mat-card-image
+                src="../../../assets/rabbit-removebg-preview.png"
+                style="width: 300px; height: 300px"
+                alt="Image Alt Text"
+              /> -->
+            </div>
+          </div>
+          <div class="back">
+            <div class="inner">
               <!-- <model-viewer src="../../../assets/davidDance.glb" camera-controls ar autoplay scale="10 10 10" shadow-intensity="1"></model-viewer> -->
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</div>
- 	</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-    
-        
+<app-nav></app-nav>
