--- a/client/src/app/child-mode/my-day/my-day.component.scss
+++ b/client/src/app/child-mode/my-day/my-day.component.scss
@@ -8,15 +8,22 @@ body,
 :host {
   background-color: #dfe0e2 !important;
 }
+h1 {
+  font-size: 4rem;
+  font-weight: 100;
+  color: #c46bed;
+  text-align: center;
+  padding: 2rem 0;
+  width: 100%;
+  text-shadow: 3px 6px 5px rgb(124 124 124 / 46%);
+}
 //audio
 audio {
   display: none;
 }
 
 //animated cards
-.row {
-  margin-top: 20px;
-}
+
 .card {
   border: 0 !important;
   border-radius: 1.25rem !important;
@@ -30,6 +37,9 @@ audio {
   align-items: center !important;
   justify-content: center !important;
   // backdrop-filter: blur(5px);
+  h1 {
+    font-weight: 400;
+  }
 }
 .card-img {
   width: 250%;
@@ -54,6 +64,10 @@ audio {
   font-size: 2rem !important;
   color: white !important;
   margin-top: 5px;
+  padding: 0 1rem;
+}
+.card-wrapper:last-child {
+  padding-bottom: 10rem;
 }
 .card-text {
   display: none;
@@ -82,6 +96,8 @@ audio {
   grid-row: 1/2;
   z-index: 99;
   height: 100vh;
+  align-content: flex-start;
+  padding: 0 1rem;
 }
 .toy-bg {
   // position: fixed;
@@ -97,4 +113,8 @@ audio {
 
 .mat-button-toggle-checked {
   background-color: lightgreen !important;
+}
+
+.mat-mdc-tab.mdc-tab a {
+  color: white !important;
 }
