--- a/client/src/app/parent-mode/habit/habit-dialog/habit-dialog.component.scss
+++ b/client/src/app/parent-mode/habit/habit-dialog/habit-dialog.component.scss
@@ -1,7 +1,13 @@
 h1 {
-  font-family: Lato;
+  font-size: 24px;
 }
-
-#mat-input-2 {
+h2 {
+  margin-bottom: 0;
+  margin-top: 1rem;
+}
+.add-habit-input {
   width: 250px;
+}
+.submit-habit-child {
+  justify-content: end;
 }
