--- a/client/src/app/parent-mode/home/home.component.scss
+++ b/client/src/app/parent-mode/home/home.component.scss
@@ -1,93 +1,126 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
-#parent{
-    display: grid;
-    background-color: aqua;
+#parent {
+  display: grid;
+  background-color: aqua;
 }
 
-.spark{
-    grid-column: 1/2;
-    grid-row: 1/2;
+.spark {
+  grid-column: 1/2;
+  grid-row: 1/2;
 }
 
-.container{
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    min-height: 100vh;
-    width: 100%;
-    min-width: 85%;
-    grid-column: 1/2;
-    grid-row: 1/2;
+.container {
+  display: flex;
+  justify-content: right;
+  align-items: start;
+  min-height: 100vh;
+  width: 100%;
+  min-width: 85%;
+  grid-column: 1/2;
+  grid-row: 1/2;
 }
 
-.wrapper h1{
-    font-size: 36px;
-    text-align: center;
-    padding: 7px;
+.wrapper h1 {
+  font-family: "Montserrat";
+  font-size: 36px;
+  text-align: center;
+  padding: 7px;
 }
 
-.wrapper{
-    width: 420px;
+.wrapper {
+  width: 420px;
+  // background-color: transparent;
+  // border: 2px solid rgba(255, 255, 255, 0.2);
+  // backdrop-filter: blur(20px);
+  // box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  // color: white;
+  // border-radius: 10px;
+  // padding: 30px 40px;
+  // margin-right: 10%;
+
+  .face {
     background-color: transparent;
-    border: 2px solid rgba(255, 255, 255, .2);
+    border: 2px solid rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(20px);
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     color: white;
     border-radius: 10px;
     padding: 30px 40px;
+    margin-right: 10%;
+    margin-top: 40%;
 
-    .input-box{
-        width:100%;
-        height: 50px;
-        margin: 30px 0;
+    .input-box {
+      width: 100%;
+      height: 50px;
+      margin: 30px 0;
 
-        input{
-            width: 100%;
-            height: 100%;
-            background: transparent;
-            border: none;
-            outline: none;
-            border: 2px solid rgba(255, 255, 255, 0.2);
-            border-radius: 40px;
-            font-size: 16px;
-            color: white;
-            padding: 20px 45px 20px 20px;
-        }
+      input {
+        width: 100%;
+        height: 100%;
+        background: transparent;
+        border: none;
+        outline: none;
+        border: 2px solid rgba(255, 255, 255, 0.2);
+        border-radius: 40px;
+        font-size: 16px;
+        color: white;
+        padding: 20px 45px 20px 20px;
+      }
     }
+  }
 }
 
-.input-box input::placeholder{
-    color: white;
+.input-box input::placeholder {
+  color: white;
 }
 
-.input-box i{
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
+.input-box i {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
 }
 
-.wrapper .signup{
-    display: flex;
+.wrapper .signup {
+  display: flex;
+  justify-content: center;
+}
+
+.wrapper .signin {
+  display: flex;
+  justify-content: space-around;
+  font-size: 16px;
+  margin: -15px 0 15px;
+  margin-top: 30px;
+
+  span {
+    content: center;
+  }
+}
+.spark-logo {
+  max-width: 500px;
+  max-height: 200px;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 80px;
+  img {
+    margin: 0 auto !important;
+    display: block;
+    width: 250px;
+  }
+}
+
+@media (max-width: 650px) {
+  .container {
     justify-content: center;
-}
-
-
-.wrapper .signin{
-    display: flex;
-    justify-content: space-around;
-    font-size: 16px;
-    margin: -15px 0 15px;
-    margin-top: 30px;
-
-    span{
-        content: center;
-    }
+  }
 }
