Resolve bug assigning child to wrong parent & minor UI updates
Summary:
  * Fix bug in service with BehaviorSubject that get/set ChildId vs UserId (causing children to 'disappear' from list)
  * Added new colors to Stepper, My Day, My Prize pages
  * Delete mat-badge
  * Remove ChildId column from Step 2: Add Habit page

Test:
  * Go to http://localhost:3000/home and click Sign In button to see it 'flip' to the new sign in form...type "1" for Username and click Sign In to sign in.
  * Navigate through all pages to make sure everything is functioning properly as before including new UI changes mentioned above

--- a/client/src/app/child-mode/my-day/my-day.component.scss
+++ b/client/src/app/child-mode/my-day/my-day.component.scss
@@ -80,11 +80,14 @@ audio {
   border-radius: 20px;
 }
 .front .btn-primary {
-  background-color: limegreen !important;
+  background-color: #96e9c6 !important;
+  color: #6c22a6;
+  font-weight: 800;
 }
 
 .back .btn-primary {
   background-color: rgb(120, 11, 11) !important;
+  font-weight: 800;
 }
 .container {
   display: grid;
