--- a/client/src/app/child-mode/nav/nav.component.html
+++ b/client/src/app/child-mode/nav/nav.component.html
@@ -9,13 +9,7 @@
 
   <mat-tab class="mat-tab">
     <ng-template mat-tab-label>
-      <a
-        mat-icon
-        class="tab-icon"
-        routerLink="/mycollection"
-        matBadge="1"
-        matBadgePosition="after"
-        matBadgeColor="accent"
+      <a mat-icon class="tab-icon" routerLink="/mycollection"
         ><mat-icon>collections</mat-icon> My Prize</a
       >
     </ng-template>
