--- a/client/src/app/parent-mode/child/child.component.html
+++ b/client/src/app/parent-mode/child/child.component.html
@@ -11,7 +11,7 @@
   </mat-form-field>
   <button
     mat-raised-button
-    style="background-color: rgb(77, 186, 120); color: white"
+    style="background-color: #96e9c6; color: black"
     [disabled]="invalidInput"
     (click)="addingChild()"
   >
@@ -41,7 +41,7 @@
         *ngIf="!c.child_edit"
         mat-button
         (click)="onEdit(c)"
-        style="color: blue"
+        style="color: #6962ad"
       >
         <mat-icon>edit</mat-icon>
       </button>
