--- a/client/src/app/child-mode/my-day-dialog/my-day-dialog.component.html
+++ b/client/src/app/child-mode/my-day-dialog/my-day-dialog.component.html
@@ -17,7 +17,7 @@
       mat-button
       (click)="goToMyPrize()"
       mat-raised-button
-      style="background: #4eba78; color: white"
+      style="background: #96e9c6; color: black"
       cdkFocusInitial
     >
       Go to My Prize
