--- a/client/src/app/child-mode/nav/nav.component.scss
+++ b/client/src/app/child-mode/nav/nav.component.scss
@@ -1,7 +1,7 @@
 .navbar {
   position: fixed;
   bottom: 0;
-  background-color: #5353c5;
+  background-color: #6962ad;
   width: 100%;
   box-shadow: 0px -8px 18px 2px #00000070;
   height: 75px;
@@ -20,9 +20,6 @@
 .mat-mdc-tab {
   height: 62px !important;
 }
-.mat-badge-medium.mat-badge-above .mat-badge-content {
-  top: -17px;
-}
 .mat-mdc-tab.mdc-tab {
   height: 62px !important;
 }
@@ -34,6 +31,6 @@
   position: absolute;
   top: 0;
   right: 0;
-  color: #9e9e9e;
+  color: white;
   margin: 5px;
 }
