--- a/client/src/app/parent-mode/stepper/stepper.component.html
+++ b/client/src/app/parent-mode/stepper/stepper.component.html
@@ -38,7 +38,7 @@
       </p>
       <button
         mat-raised-button
-        style="background: #4eba78; color: white"
+        style="background: #96e9c6; color: black"
         (click)="enterChildMode()"
       >
         <mat-icon>child_care</mat-icon>
