Resolve frontend bug preventing confetti after 1st time & minor UI updates
Summary:
  * Fix bug so that confetti can always be triggered each time child completes all habits for the day 
  * Remove top highlight border over active navbar item (because it doesn't switch to active state
consistently when user clicks menu item) 
  * Update qr code for David AR dance 
  * Prevent adding child and adding habit when inputs are empty

Test:
  * Go to http://localhost:3000/home and click Sign In button to see it 'flip' to the new sign in
form...type "1" for Username and click Sign In to sign in.    
  * Navigate through all pages to make sure everything is functioning properly as before including new
UI changes mentioned above

enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit.

--- a/client/src/app/parent-mode/habit/habit-dialog/habit-dialog.component.html
+++ b/client/src/app/parent-mode/habit/habit-dialog/habit-dialog.component.html
@@ -46,7 +46,12 @@
   </mat-dialog-content>
   <mat-dialog-actions class="submit-habit-child">
     <button mat-button (click)="onNoClick()" tabindex="-1">No Thanks</button>
-    <button mat-button tabindex="2" (click)="chosenChildrenAndAddHabit()">
+    <button
+      mat-button
+      tabindex="2"
+      (click)="chosenChildrenAndAddHabit()"
+      [disabled]="!isInputValid()"
+    >
       Ok
     </button>
   </mat-dialog-actions>
