Update UI for homepage and stepper
Summary: 
  * fix css bug on homepage preventing ability to click-and-drag animated background 
  * add css media query to home for smaller screens so sign up/in form and logo are centered 
  * replace background of stepper

Test:
  * Go to http://localhost:3000/home and click Sign In button to see it 'flip' to the new sign in form...type "1" for Username and click Sign In to sign in.    
  * Navigate through all pages to make sure everything is functioning properly as before including new UI changes mentioned above

 # Please
enter the commit message
for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit.

--- a/client/src/app/child-mode/my-day/my-day.component.scss
+++ b/client/src/app/child-mode/my-day/my-day.component.scss
@@ -8,6 +8,9 @@ body,
 :host {
   background-color: #dfe0e2 !important;
 }
+.children {
+  background-color: #6962ad !important;
+}
 h1 {
   font-size: 4rem;
   font-weight: 100;
