--- a/client/src/app/child-mode/my-day/my-day.component.html
+++ b/client/src/app/child-mode/my-day/my-day.component.html
@@ -1,15 +1,17 @@
-<mat-button-toggle-group aria-label="Children Toggle" class="child-selector">
-  <mat-button-toggle [value]="'All'" (click)="onToggleClick(0)"
-    >ALL</mat-button-toggle
-  >
-  <mat-button-toggle
-    *ngFor="let child of children"
-    [value]="child.child_name"
-    (click)="onToggleClick(child.child_id!)"
-  >
-    {{ child.child_name }}
-  </mat-button-toggle>
-</mat-button-toggle-group>
+<div class="children">
+  <mat-button-toggle-group aria-label="Children Toggle" class="child-selector">
+    <mat-button-toggle [value]="'All'" (click)="onToggleClick(0)"
+      >ALL</mat-button-toggle
+    >
+    <mat-button-toggle
+      *ngFor="let child of children"
+      [value]="child.child_name"
+      (click)="onToggleClick(child.child_id!)"
+    >
+      {{ child.child_name }}
+    </mat-button-toggle>
+  </mat-button-toggle-group>
+</div>
 
 <div class="container">
   <div class="row" style="z-index: 99">
