Update Home Page with About Spark section
Summary:
	*Add description of the product and created design for the about section
	*Refactor retrun type to get current user
	*Add image for design home page

Test:
	*Check localhost://3000 and the homepage has expected desien
	*Refactoring did no change the behavior of the application, new user can add children and habits

--- a/client/src/app/parent-mode/home/home.component.html
+++ b/client/src/app/parent-mode/home/home.component.html
@@ -1,16 +1,10 @@
-<link
-  href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-  rel="stylesheet"
-/>
+<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+
 <body class="home-component">
   <div id="parent">
     <div class="spark">
-      <iframe
-        src="https://my.spline.design/molang3dcopycopy-bfb0d0c397d28d3facebd59d350267c7/"
-        frameborder="0"
-        width="100%"
-        height="100%"
-      ></iframe>
+      <iframe src="https://my.spline.design/molang3dcopycopy-bfb0d0c397d28d3facebd59d350267c7/" frameborder="0"
+        width="100%" height="100%"></iframe>
     </div>
     <div class="spark-logo"><img src="https://i.imgur.com/TzlfqR1.png" /></div>
     <div class="container">
@@ -19,38 +13,20 @@
           <form action="" class="face front">
             <h1>Sign Up</h1>
             <div class="input-box">
-              <input
-                type="text"
-                placeholder="First name"
-                [(ngModel)]="name"
-                required
-              />
+              <input type="text" placeholder="First name" [(ngModel)]="name" required />
             </div>
             <div class="input-box">
-              <input
-                type="text"
-                placeholder="Last name"
-                [(ngModel)]="surName"
-                required
-              />
+              <input type="text" placeholder="Last name" [(ngModel)]="surName" required />
             </div>
             <div class="signup">
-              <button
-                mat-raised-button
-                style="background-color: rgb(47, 47, 50); color: white"
-                (click)="SignUp()"
-              >
+              <button mat-raised-button style="background-color: rgb(47, 47, 50); color: white" (click)="SignUp()">
                 Sign Up
               </button>
             </div>
             <div class="signin">
               <span>Already have an account? </span>
-              <button
-                mat-raised-button
-                style="background-color: rgb(100, 100, 237); color: white"
-                class="rotate-btn"
-                (click)="isFlipped = !isFlipped"
-              >
+              <button mat-raised-button style="background-color: rgb(100, 100, 237); color: white" class="rotate-btn"
+                (click)="isFlipped = !isFlipped">
                 Sign In
               </button>
             </div>
@@ -58,44 +34,64 @@
           <form action="" class="face back">
             <h1>Sign In</h1>
             <div class="input-box">
-              <input
-                type="text"
-                placeholder="Username"
-                [(ngModel)]="userId"
-                autofocus
-              />
+              <input type="text" placeholder="Username" [(ngModel)]="userId" autofocus />
             </div>
             <div class="input-box">
-              <input
-                type="text"
-                placeholder="Password"
-                [(ngModel)]="surName"
-                required
-              />
+              <input type="text" placeholder="Password" [(ngModel)]="surName" required />
             </div>
             <div class="signup">
-              <button
-                mat-raised-button
-                style="background-color: rgb(47, 47, 50); color: white"
-                (click)="chooseUser()"
-              >
+              <button mat-raised-button style="background-color: rgb(47, 47, 50); color: white" (click)="chooseUser()">
                 Sign In
               </button>
             </div>
             <div class="signin">
               <span>Don't have an account? </span>
-              <button
-                mat-raised-button
-                style="background-color: rgb(100, 100, 237); color: white"
-                class="rotate-btn"
-                (click)="isFlipped = !isFlipped"
-              >
+              <button mat-raised-button style="background-color: rgb(100, 100, 237); color: white" class="rotate-btn"
+                (click)="isFlipped = !isFlipped">
                 Sign Up
               </button>
             </div>
           </form>
         </div>
       </div>
+    </div>
+  </div>
+  <h1 class="words top">
+    🌍🌍🌍🌍 | ART 👁️‍🗨️👁️‍🗨️👁️‍🗨️👁️‍🗨️👁️‍🗨️| AUGMENTED REALITY 💝💝💝💝| FUN AND ENTERTAINING
+    EXPERIENCE 🐱🐱🐱🐱🐱🐱| SELF-DISCIPLINE | ART 🟪🟪🟪🟪| AUGMENTED |
+    CURIOSITY💖💖💖CREATIVITY 🐣🐣🐣🐣🐣🐣| SELF-DISCIPLINE 🌍🌍🌍 | ART | AUGMENTED
+    REALITY💝💝💝💝💝 | FUN AND ENTERTAINING EXPERIENCE 🌍🌍🌍 | CURIOSITY |
+    CREATIVITY 💖💖💖💖| ACTIVE LEARNING 🧿🧿🧿| 🐱🐱🐱🐱🐱 💝💝 SELF-DISCIPLINE
+  </h1>
+  <h1 class="words">
+    CREATIVITY 🐣🐣🐣🐣🐣🐣| SELF-DISCIPLINE 🌍🌍🌍 | ART | AUGMENTED
+    REALITY💝💝💝💝💝 | FUN AND ENTERTAINING EXPERIENCE 🌍🌍🌍 | CURIOSITY |
+    CREATIVITY 💖💖💖💖| ACTIVE LEARNING 🧿🧿🧿| 🐱🐱🐱🐱🐱 💝💝 SELF-DISCIPLINE
+    🌍🌍🌍🌍 | ART 👁️‍🗨️👁️‍🗨️👁️‍🗨️👁️‍🗨️👁️‍🗨️| AUGMENTED REALITY 💝💝💝💝| FUN AND ENTERTAINING
+    EXPERIENCE 🐱🐱🐱🐱🐱🐱| SELF-DISCIPLINE | ART 🟪🟪🟪🟪| AUGMENTED |
+    CURIOSITY💖💖💖
+  </h1>
+  <div class="about">
+    <div class="text-about">
+      <h1>Spark– Where Habits Meet Fun!</h1>
+      <p>
+        🚀 Unlock a world of excitement and learning with our revolutionary app designed to make habit-building a joyous
+        adventure for children! 🌟
+      </p>
+      <ul>
+        <li>🌈 Dive into a realm where habits become thrilling challenges and achievements unlock a cascade of AR
+          treasures!🎁</li>
+        <li>👶 Tailored for young minds, SPARK transforms routine tasks into delightful experiences, motivating
+          children to establish and follow habits effortlessly. 🚀</li>
+        <li>🌟 What sets us apart? The magic lies in our unique AR rewards system! 🚀 Each completed habit unveils a
+          vibrant
+          3D prize that pops up right in front of your child's eyes, turning their accomplishments into memorable
+          moments.
+          🎮✨</li>
+      </ul>
+    </div>
+    <div class="child">
+      <img src="../../../assets/child.png" alt="Child" />
     </div>
   </div>
 </body>
