--- a/client/src/app/parent-mode/home/home.component.scss
+++ b/client/src/app/parent-mode/home/home.component.scss
@@ -17,6 +17,26 @@ body.home-component {
   grid-row: 1/4;
 }
 
+.words {
+  white-space: nowrap;
+  animation: scroll 15s linear infinite;
+  h1 {
+    margin-top: 0;
+  }
+}
+
+.words.top {
+  padding-top: 10px;
+}
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
 .container {
   display: flex;
   justify-content: right;
@@ -127,6 +147,50 @@ body.home-component {
     display: block;
     width: 250px;
   }
+}
+
+.about {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  margin: 20px;
+  // background-color: rgb(65, 53, 93);
+  background-size: cover;
+  justify-content: center;
+}
+
+.about .text-about {
+  margin-top: 20px;
+  flex-basis: 55%;
+  color: white;
+  border: 3px solid rgb(255, 255, 255) e;
+  text-align: center;
+  background-color: #4d2572ab;
+  border-radius: 30px;
+  h1 {
+    margin: 50px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 40px;
+    font-weight: 600;
+  }
+  p,
+  li {
+    margin: 50px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 25px;
+  }
+
+  ul {
+    list-style-type: none;
+  }
+}
+
+.about .child {
+  img {
+    width: 815px;
+  }
+  flex-basis: 45%;
+  padding-top: 70px;
 }
 
 @media (max-width: 650px) {
